--- a/Converse/Venetian.html
+++ b/Converse/Venetian.html
@@ -2319,11 +2319,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/NGlFKny.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/f9BR0KO.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/gbLm0XQ.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i74.image.html:image/html-->
-<img id="i74" src="https://i.imgur.com/AjwDaUD.jpg"/>
+<img id="i74" src="https://i.imgur.com/cGHTc8I.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/OSyEJER.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
@@ -2544,7 +2544,7 @@ name: 3bp29lu.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: NGlFKny.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: f9BR0KO.jpg; fileId: ; sourceTypeId: externalUrl;
+name: gbLm0XQ.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i74.image.meta:image/meta*/
