--- a/Converse/Cube.html
+++ b/Converse/Cube.html
@@ -914,7 +914,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Será un buen semestre si lo empiezas con un descuento en tus nuevas Chucks.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/RgwkicR.jpg"/>
+<img id="i130" src="https://i.imgur.com/tROK6NL.jpg"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
 <img id="i286" src="https://i.imgur.com/UBa9K6B.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -936,7 +936,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Sólo del 25 al 30 de Julio llévate tus Converse con un descuento en Converse Condesa.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/rGGgZFO.jpg"/>
+<img id="i58" src="https://i.imgur.com/cpMmURx.jpg"/>
 <!--#/#--><!--#i5.i310.image.html:image/html-->
 <img id="i310" src="https://i.imgur.com/UBa9K6B.png"/>
 <!--#/#--><!--#i5.i296.image.html:image/html-->
@@ -958,7 +958,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¡Tienes tus Chucks a menos de 2 cuadras!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/lizJTq7.jpg"/>
+<img id="i60" src="https://i.imgur.com/zbPqwM6.jpg"/>
 <!--#/#--><!--#i6.i332.image.html:image/html-->
 <img id="i332" src="https://i.imgur.com/OSyEJER.png"/>
 <!--#/#--><!--#i6.i334.image.html:image/html-->
