--- a/Converse/ZoomExp300x600.html
+++ b/Converse/ZoomExp300x600.html
@@ -182,7 +182,7 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/SJXwI50.jpg">
       
     <li>
-      <img src="https://i.imgur.com/u4h6j0z.jpg">
+      <img src="https://i.imgur.com/10lsVOS.jpg">
       
     <li>
       <img src="https://i.imgur.com/yDamd3E.jpg">
