--- a/VANS/Venetian.html
+++ b/VANS/Venetian.html
@@ -2238,19 +2238,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 261px; height: 85px;
-        -ms-transform: translate(0, 0) translate(34px, 256px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(34px, 256px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(34px, 256px) rotate(0deg);
-        transform: translate(0, 0) translate(34px, 256px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(32px, 256px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(32px, 256px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(32px, 256px) rotate(0deg);
+        transform: translate(0, 0) translate(32px, 256px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
 #i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 267px; height: 50px;
-        -ms-transform: translate(0, 0) translate(29px, 302px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(29px, 302px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(29px, 302px) rotate(0deg);
-        transform: translate(0, 0) translate(29px, 302px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(30px, 302px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(30px, 302px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(30px, 302px) rotate(0deg);
+        transform: translate(0, 0) translate(30px, 302px) rotate(0deg);
 }
 /*#/#*//*#i81.shape.css:shape/base/css*/
 #i81 { background-color: #dedede; opacity: 0.00;
@@ -2282,29 +2282,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i89.image.css:image/base/css*/
 #i89 { opacity: 1; }
 /*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
-#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 36px;
-        -ms-transform: translate(0, 0) translate(3px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(3px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(3px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(3px, 443px) rotate(0deg);
+#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 31px; height: 32px;
+        -ms-transform: translate(0, 0) translate(6px, 445px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 445px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 445px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 445px) rotate(0deg);
 }
 /*#/#*//*#i101.image.css:image/base/css*/
 #i101 { opacity: 1; }
 /*#/#*//*#i101.i102.positioning.css:positioning/base/css.2*/
-#i101 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 36px; height: 37px;
-        -ms-transform: translate(0, 0) translate(37px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(37px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(37px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(37px, 443px) rotate(0deg);
+#i101 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 31px; height: 32px;
+        -ms-transform: translate(0, 0) translate(39px, 445px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(39px, 445px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(39px, 445px) rotate(0deg);
+        transform: translate(0, 0) translate(39px, 445px) rotate(0deg);
 }
 /*#/#*//*#i93.image.css:image/base/css*/
 #i93 { opacity: 1; }
 /*#/#*//*#i93.i94.positioning.css:positioning/base/css.2*/
-#i93 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 36px;
-        -ms-transform: translate(0, 0) translate(72px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(72px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(72px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(72px, 443px) rotate(0deg);
+#i93 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 31px; height: 32px;
+        -ms-transform: translate(0, 0) translate(72px, 445px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(72px, 445px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(72px, 445px) rotate(0deg);
+        transform: translate(0, 0) translate(72px, 445px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2495,7 +2495,7 @@ var el = document.getElementById('i101');
 
 el.addEventListener('click', function(e){
     /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/3ytstynCPLGdeS2D7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
