--- a/VANS/Cube.html
+++ b/VANS/Cube.html
@@ -657,11 +657,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i286.image.css:image/base/css*/
 #i286 { opacity: 1; }
 /*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
-#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 171px; height: 46px;
-        -ms-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
+#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 162px; height: 43px;
+        -ms-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
@@ -748,14 +748,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(236px, 218px) rotate(0deg);
         transform: translate(0, 0) translate(236px, 218px) rotate(0deg);
 }
-/*#/#*//*#i5.i352.image.css:image/base/css*/
-#i352 { opacity: 1; }
-/*#/#*//*#i352.i353.positioning.css:positioning/base/css.2*/
-#i352 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 171px; height: 46px;
-        -ms-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
+/*#/#*//*#i5.i370.image.css:image/base/css*/
+#i370 { opacity: 1; }
+/*#/#*//*#i370.i371.positioning.css:positioning/base/css.2*/
+#i370 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 162px; height: 43px;
+        -ms-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -824,15 +824,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i366.image.css:image/base/css*/
-#i366 { opacity: 1; }
-/*#/#*//*#i366.i367.positioning.css:positioning/base/css.2*/
-#i366 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 171px; height: 46px;
-        -ms-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-        transform: translate(0, 0) translate(62px, 139px) rotate(0deg);
-}
 /*#/#*//*#i6.i368.image.css:image/base/css*/
 #i368 { opacity: 1; }
 /*#/#*//*#i368.i369.positioning.css:positioning/base/css.2*/
@@ -841,6 +832,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(236px, 218px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(236px, 218px) rotate(0deg);
         transform: translate(0, 0) translate(236px, 218px) rotate(0deg);
+}
+/*#/#*//*#i6.i372.image.css:image/base/css*/
+#i372 { opacity: 1; }
+/*#/#*//*#i372.i373.positioning.css:positioning/base/css.2*/
+#i372 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 162px; height: 43px;
+        -ms-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
+        transform: translate(0, 0) translate(67px, 139px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -912,11 +912,11 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Será un buen semestre si lo empiezas con un descuento en tus nuevas VANs.</div>
+<div id="i14">Será un buen semestre si lo empiezas con un descuento en tus nuevas VANS.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/SctKdfo.jpg"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
-<img id="i286" src="https://i.imgur.com/SJ2hYPt.png"/>
+<img id="i286" src="https://i.imgur.com/Ll8c5gB.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/IVroRJF.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -934,13 +934,13 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Sólo del 25 al 30 de Julio llévate tus VANs con un descuento en Parque Lindavista.</div>
+<div id="i24">Sólo del 25 al 30 de Julio llévate tus VANS con un descuento en Parque Lindavista.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/EK37uNG.jpg"/>
 <!--#/#--><!--#i5.i350.image.html:image/html-->
 <img id="i350" src="https://i.imgur.com/IVroRJF.png"/>
-<!--#/#--><!--#i5.i352.image.html:image/html-->
-<img id="i352" src="https://i.imgur.com/SJ2hYPt.png"/>
+<!--#/#--><!--#i5.i370.image.html:image/html-->
+<img id="i370" src="https://i.imgur.com/Ll8c5gB.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i346.image.html:image/html-->
@@ -956,13 +956,13 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¡Tienes tus nuevas VANs a la vuelta de la esquina!</div>
+<div id="i34">¡Tienes tus nuevas VANS a la vuelta de la esquina!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/Z7XXiJB.jpg"/>
-<!--#/#--><!--#i6.i366.image.html:image/html-->
-<img id="i366" src="https://i.imgur.com/SJ2hYPt.png"/>
 <!--#/#--><!--#i6.i368.image.html:image/html-->
 <img id="i368" src="https://i.imgur.com/IVroRJF.png"/>
+<!--#/#--><!--#i6.i372.image.html:image/html-->
+<img id="i372" src="https://i.imgur.com/Ll8c5gB.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i362.image.html:image/html-->
@@ -1096,10 +1096,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i350.i351.positioning.js:positioning/base/js.2*/
 bmShow('i350');
-/*#/#*//*#i5.i352.image.js:image/base/js*/
+/*#/#*//*#i5.i370.image.js:image/base/js*/
 
-/*#/#*//*#i352.i353.positioning.js:positioning/base/js.2*/
-bmShow('i352');
+/*#/#*//*#i370.i371.positioning.js:positioning/base/js.2*/
+bmShow('i370');
 /*#/#*//*#i95.i312.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
@@ -1171,14 +1171,14 @@ if ('click' === 'click') {
   
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i6.i366.image.js:image/base/js*/
-
-/*#/#*//*#i366.i367.positioning.js:positioning/base/js.2*/
-bmShow('i366');
 /*#/#*//*#i6.i368.image.js:image/base/js*/
 
 /*#/#*//*#i368.i369.positioning.js:positioning/base/js.2*/
 bmShow('i368');
+/*#/#*//*#i6.i372.image.js:image/base/js*/
+
+/*#/#*//*#i372.i373.positioning.js:positioning/base/js.2*/
+bmShow('i372');
 /*#/#*//*#i99.i336.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -1337,10 +1337,10 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i350.i351.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i352.image.meta:image/meta*/
+/*#/#*//*#i5.i370.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i352.i353.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i370.i371.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1376,15 +1376,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i366.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i366.i367.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i368.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i368.i369.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i372.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i372.i373.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
