--- a/VANS/Venetian.html
+++ b/VANS/Venetian.html
@@ -2155,10 +2155,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 80px; height: 40px;
-        -ms-transform: translate(0, 0) translate(238px, 440px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(238px, 440px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(238px, 440px) rotate(0deg);
-        transform: translate(0, 0) translate(238px, 440px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(235px, 439px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(235px, 439px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(235px, 439px) rotate(0deg);
+        transform: translate(0, 0) translate(235px, 439px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2228,29 +2228,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 174px; height: 46px;
-        -ms-transform: translate(0, 0) translate(70px, 335px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(70px, 335px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(70px, 335px) rotate(0deg);
-        transform: translate(0, 0) translate(70px, 335px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 167px; height: 45px;
+        -ms-transform: translate(0, 0) translate(79px, 335px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(79px, 335px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(79px, 335px) rotate(0deg);
+        transform: translate(0, 0) translate(79px, 335px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 261px; height: 85px;
-        -ms-transform: translate(0, 0) translate(32px, 256px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(32px, 256px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(32px, 256px) rotate(0deg);
-        transform: translate(0, 0) translate(32px, 256px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(29px, 256px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(29px, 256px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(29px, 256px) rotate(0deg);
+        transform: translate(0, 0) translate(29px, 256px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
 #i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 267px; height: 50px;
-        -ms-transform: translate(0, 0) translate(30px, 302px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(30px, 302px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(30px, 302px) rotate(0deg);
-        transform: translate(0, 0) translate(30px, 302px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(28px, 302px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 302px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 302px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 302px) rotate(0deg);
 }
 /*#/#*//*#i81.shape.css:shape/base/css*/
 #i81 { background-color: #dedede; opacity: 0.00;
@@ -2327,11 +2327,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/IVroRJF.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/SJ2hYPt.png"/>
+<img id="i46" src="https://i.imgur.com/Ll8c5gB.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡Tienes tus nuevas VANs a la vuelta de la esquina!</div>
+<div id="i63">¡Tienes tus nuevas VANS a la vuelta de la esquina!</div>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Sólo del 25 al 30 de Julio llévate tus VANs con un descuento en Parque Lindavista.</div>
+<div id="i68">Sólo del 25 al 30 de Julio llévate tus VANS con un descuento en Parque Lindavista.</div>
 <!--#/#--><!--#i81.shape.html:shape/html-->
 <div id="i81"></div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
@@ -2563,11 +2563,11 @@ customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: ¡Tienes tus nuevas VANs a la vuelta de la esquina!; customName: false;
+name: ¡Tienes tus nuevas VANS a la vuelta de la esquina!; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: Sólo del 25 al 30 de Julio llévate tus VANs con un descuento en Parque Lindavista.; customName: false;
+name: Sólo del 25 al 30 de Julio llévate tus VANS con un descuento en Parque Lindavista.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i81.shape.meta:shape/meta*/
