--- a/VANS/ZoomExp300x600.html
+++ b/VANS/ZoomExp300x600.html
@@ -193,9 +193,9 @@ a {text-decoration: none;}
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none;">Sólo del 25 al 30 de Julio llévate tus VANs con un descuento en Parque Lindavista.</span>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none;">Sólo del 25 al 30 de Julio llévate tus VANS con un descuento en Parque Lindavista.</span>
     
-                  <div class="cta" > <img src="https://i.imgur.com/SJ2hYPt.png" style="height: 50px; margin-left: -35px;"></a></div>
+                  <div class="cta" > <img src="https://i.imgur.com/Ll8c5gB.png" style="height: 50px; margin-left: -35px;"></a></div>
 
                  
                    </div>
