--- a/Fester/Venetian300x600.html
+++ b/Fester/Venetian300x600.html
@@ -2201,13 +2201,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(214px, 553px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 31px;
-        -ms-transform: translate(0, 0) translate(11px, 475px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 475px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 475px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 475px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 115px;
+        -ms-transform: translate(0, 0) translate(11px, 470px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 470px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 470px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 470px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2249,15 +2249,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
         transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
 }
-/*#/#*//*#i51.text.css:text/base/css*/
-#i51 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i51.i52.positioning.css:positioning/base/css.2*/
-#i51 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 271px; height: 56px;
-        -ms-transform: translate(0, 0) translate(15px, 508px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(15px, 508px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(15px, 508px) rotate(0deg);
-        transform: translate(0, 0) translate(15px, 508px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2267,7 +2258,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/nEm0gJ9.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Regresaron las lluvias?</div>
+<div id="i7">El blanco repele el calor, si queremos obtener un ambiente fresco en la vivienda, se recomienda aplicar impermeabilizante blanco en las zonas de clima cálido, disminuyendo 2º hacia el interior.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2282,8 +2273,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <button id="i49">¿Saber más?</button>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
-<!--#/#--><!--#i51.text.html:text/html-->
-<div id="i51">Olvídalas con los productos de la marca Fester y aprovecha los descuentos y promociones que tenemos para ti.</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2355,8 +2344,6 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i49.i50.positioning.js:positioning/base/js.2*/
 bmShow('i49');
-/*#/#*//*#i51.i52.positioning.js:positioning/base/js.2*/
-bmShow('i51');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2380,7 +2367,7 @@ customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: ¿Regresaron las lluvias?; customName: false;
+name: El blanco repele el calor, si queremos obtener un ambiente fresco en la vivienda, se recomienda aplicar impermeabilizante blanco en las zonas de clima cálido, disminuyendo 2º hacia el interior.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
@@ -2403,9 +2390,5 @@ data: /*!*/{}/*!*/;
 name: ;
 customName: false;
 /*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i51.text.meta:text/meta*/
-name: Olvídalas con los productos de la marca Fester y aprovecha los descuentos y promociones que tenemos para ti.; customName: false;
-/*#/#*//*#i51.i52.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
