--- a/El Palacio de Hierro/Cube.html
+++ b/El Palacio de Hierro/Cube.html
@@ -891,7 +891,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡25% de descuento en joyería!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/bgnDM2L.jpg"/>
+<img id="i130" src="https://i.imgur.com/HtL1CtR.jpg"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
 <img id="i286" src="https://i.imgur.com/lgMkwsD.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
