--- a/Mapfre/formulario-def.html
+++ b/Mapfre/formulario-def.html
@@ -310,7 +310,7 @@
         }
 
         .bg.cover-4 {
-            background: url("https://i.imgur.com/xb731Ik.jpg");
+            background: url("https://i.imgur.com/MG25g6n.png");
             background-size: cover;
             
         }
@@ -633,7 +633,7 @@
 
                     <span style="display: flex; flex-direction: row-reverse; justify-content: left; width: 100%; margin-top: 30px; margin-left: -10px;">
 
-                        <label style="min-width: 80%" for="condiciones"><a href="https://www.mapfre.com.mx/seguros-mx/particulares/paginas/aviso-de-privacidad.jsp" target="_blank" style="font-size: 15px; text-align: left; color: red;">He leído y acepto el
+                        <label style="min-width: 80%" for="condiciones"><a href="https://www.mapfre.com.mx/seguros-mx/particulares/paginas/aviso-de-privacidad.jsp" target="_blank" style="font-size: 15px; font-family: Trebuchet MS; text-align: left; color: red;  ">He leído y acepto el
 AVISO DE PRIVACIDAD</a></label>
                         
                         <!--<input type="checkbox" width="10" name="condiciones2" style="text-align: left; background-color: red" /></span>
@@ -664,7 +664,7 @@ AVISO DE PRIVACIDAD</a></label>
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: 50px;">
 
-                    <img src="https://i.imgur.com/VKNm3mv.png" style="height:135px; width:310px; text-decoration: none; margin-left: -25PX;">
+                    <img src="https://i.imgur.com/Cb0BlO2.png" style="height:115px; width:270px; text-decoration: none; margin-left: -25PX;">
                 </span>
 
                 <span class="s-III" style="margin-top: -200px;">
