--- a/Mapfre/Fade.html
+++ b/Mapfre/Fade.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.cosmoenespanol.com/belleza/luz-pulsada-metodo-depilacion/';
+                adfClickTAGUrl = 'https://cotizador.mapfre.com.mx/cotizador3';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -149,6 +149,7 @@
             padding: 6px 0 0 .3em;
             line-height: 1.1;
             color: #000;
+            text-align: center;
             margin-top: 10px
                 
         }
@@ -309,7 +310,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:20px;">Depilación en casa y sin dolor, ¡es posible con Philips Lumea!</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:14px;">Te ofrecemos una variedad de <b> Seguros de Autos</b>: Podrás contratar desde una cobertura básica hasta paquetes más extensos. </span></div>
            
             <div style="bottom:0px;text-align:right;margin-top:8px;"> 
               <img src="https://i.imgur.com/P9zKKru.jpg" style="height:16px;margin-right:10px;">
